--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -1,77 +1,212 @@
-/*Sección proyectos*/
 .projects-section {
-    text-align: center;
-    padding: 40px 20px;
+  padding: 40px;  
+}
+
+h2{
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  justify-items: center;
+}
+
+/* From Uiverse.io by Rodrypaladin */ 
+.card {
+  width: 275px;
+  position: relative;
+  background: var( --color-primary);
+  padding: 20px;
+}
+
+.card::after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 10px;
+  bottom: 15px;
+  right: 0;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
+  transform: rotate(5deg);
+  transition: all 0.1s ease-in;
+}
+
+.card::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 10px;
+  bottom: 15px;
+  left: 0;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
+  transform: rotate(-5deg);
+  transition: all 0.1s ease-in;
+}
+
+.card:hover:before, .card:hover:after {
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
+}
+
+.card:hover:before {
+  transform: rotate(-8deg);
+}
+
+.card:hover:after {
+  transform: rotate(8deg);
+}
+
+.card__img {
+  position: relative;
+  background: #FFFFFF;
+  background: linear-gradient(315deg, #68aeff, #0032a6);
+  width: 100%;
+  height: 175px;
+}
+
+.card__span {
+  cursor: pointer;
+  font-size: 11px;
+  position: absolute;
+  background-color: white;
+  top: 10px;
+  left: 10px;
+  padding: 3px 7px;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.1s ease-in;
+  user-select: none;
+}
+
+.card__span:hover {
+  transform: translateX(5px);
+}
+
+.card-int {
+  padding: 20px 0 0 0;
+}
+
+.card-int__title {
+  font-weight: bold;
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+}
+
+.card-int__button {
+  cursor: pointer;
+  margin: 20px 0 0 0;
+  padding: 7px 20px;
+  width: 100%;
+  background-color: rgb(238, 246, 255);
+  border: none;
+  color: black;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.1s ease-in;
+  user-select: none;
+}
+
+.card-int__button:active {
+  box-shadow: 0px 0px 15px rgba(0, 119, 255, 0.5);
+}
+
+.card-int__button:hover::before {
+  animation: effect_two 0.4s 1;
+}
+
+.card__img {
+  position: relative;
+  width: 100%;
+  height: 175px;
+  overflow: hidden;
+}
+
+.card__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Asegura que la imagen se ajuste sin distorsión */
+}
+
+
+.card-int__button::before {
+  content: 'More for this article';
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background: rgb(0,133,255);
+  background: linear-gradient(146deg, #0032a6 0%, #68aeff 100%);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(-99%);
+  z-index: 1;
+  animation: effect_one 10s infinite;
+}
+
+.card-int__button:hover::before {
+  transform: translateX(0%);
+}
+
+.excerpt {
+  font-size: 14px;
+}
+
+@keyframes effect_one {
+  0% {
+    transform: translateX(-99%);
   }
-  
-  .projects-section h1 {
-    color: #ffffff;
-    margin-bottom: 40px;
-    font-size: 28px;
+
+  25% {
+    transform: translateX(-90%);
   }
-  
-  .projects-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
+
+  50% {
+    transform: translateX(-80%);
   }
-  
-  .project-box {
-    background-color: #1a1818; /* Fondo para las cajas */
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    max-width: 300px;
-    flex: 1 1 300px;
-    margin: 10px;
-    transition: transform 0.3s;
-    position: relative;
+
+  75% {
+    transform: translateX(-95%);
   }
-  
-  .project-box img {
-    width: 100%;
-    height: auto;
-    display: block;
+
+  100% {
+    transform: translateX(-99%);
   }
-  
-  .project-info {
-    padding: 20px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(#347e22, #226e13);
-    transform: translateY(100%);
-    transition: transform 0.3s;
+}
+
+@keyframes effect_two {
+  to {
+    transform: translateX(-1%);
   }
-  
-  .project-box:hover {
-    transform: scale(1.05);
+
+  from {
+    transform: translateX(-99%);
   }
-  
-  .project-box:hover .project-info {
-    transform: translateY(0);
+}
+
+@media (max-width: 1200px) {
+  .projects-grid {
+    grid-template-columns: repeat(3, 1fr);
   }
-  
-  .project-info h3 {
-    color: #faf7f7;
-    margin-bottom: 10px;
-    font-size: 22px;
+}
+
+@media (max-width: 768px) {
+  .projects-grid {
+    grid-template-columns: repeat(2, 1fr);
   }
-  
-  .project-info p {
-    color: #fff8f8;
-    font-size: 16px;
-    margin-bottom: 20px;
+}
+
+@media (max-width: 576px) {
+  .projects-grid {
+    grid-template-columns: 1fr;
   }
-  
-  .project-info a.learn-more {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .project-info a.learn-more:hover {
-    text-decoration: underline;
-  }
+}
