--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -1,38 +1,66 @@
- <!--Proyectos-->
- <section id="Projects" class="projects-section" data-aos="zoom-in-up">
-    <h1>Proyectos</h1>
-    <div class="projects-container">
-        <div class="project-box">
-            <img src="../../../assets/images/proyectos/Trooper.png" alt="Proyecto 1">
-            <div class="project-info">
-                <h3>Trooper Stay Java</h3>
-                <p class="description">Sistema de estadías. Tecnlogías utilizadas:
-                    Java | MySQL | JoptionPane | JoptionPanel
-                </p>
-                <a href="https://github.com/CodeStrong2023/ProyectoJuniorTechTroopers" class="learn-more"
-                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
-            </div>
-        </div>
-        <div class="project-box">
-            <img src="../../../assets/images/proyectos/TrooperPython.png" alt="Proyecto 2">
-            <div class="project-info">
-                <h3>Trooper Stay Python</h3>
-                <p class="description">Aplicación de hospedajes.
-                    Tecnologías utilizadas: Python | MySQL | TKinter </p>
-                <a href="https://github.com/CodeStrong2023/ProyectoPythonJuniorTechTroopers" class="learn-more"
-                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
-            </div>
-        </div>
-        <div class="project-box">
-            <img src="../../../assets/images/proyectos/e-commerce.png" alt="Proyecto 3">
-            <div class="project-info">
-                <h3>Proximamente!!</h3>
-                <p class="description">E-commerce-trooper
-                    Tecnologías utilizadas: Lo sabran pronto </p>
-                <a href="https://github.com/CodeStrong2023/ProyectoPythonJuniorTechTroopers" class="learn-more"
-                    target="_blank"><button class="btn btn-dark">Saber más</button></a>
-            </div>
-        </div>
-
+<section class="projects-section" id="Projects">
+  <h2>Proyectos</h2>
+  <div class="projects-grid">
+    <!-- Card 1 -->
+    <div class="card">
+      <div class="card__img">
+        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
+        <span class="card__span">Category</span>
+      </div>
+      <div class="card-int">
+        <p class="card-int__title">Project Title</p>
+        <p class="excerpt">Brief description of the project.</p>
+        <button class="card-int__button">Show</button>
+      </div>
     </div>
+
+    <div class="card">
+      <div class="card__img">
+        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
+        <span class="card__span">Category</span>
+      </div>
+      <div class="card-int">
+        <p class="card-int__title">Project Title</p>
+        <p class="excerpt">Brief description of the project.</p>
+        <button class="card-int__button">Show</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card__img">
+        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
+        <span class="card__span">Category</span>
+      </div>
+      <div class="card-int">
+        <p class="card-int__title">Project Title</p>
+        <p class="excerpt">Brief description of the project.</p>
+        <button class="card-int__button">Show</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card__img">
+        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
+        <span class="card__span">Category</span>
+      </div>
+      <div class="card-int">
+        <p class="card-int__title">Project Title</p>
+        <p class="excerpt">Brief description of the project.</p>
+        <button class="card-int__button">Show</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card__img">
+        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
+        <span class="card__span">Category</span>
+      </div>
+      <div class="card-int">
+        <p class="card-int__title">Project Title</p>
+        <p class="excerpt">Brief description of the project.</p>
+        <button class="card-int__button">Show</button>
+      </div>
+    </div>
+    
+  </div>
 </section>
